--- a/notebooks/Interfaces/Local Scope 1 - Is a graphlet class more prevalent than others?.ipynb
+++ b/notebooks/Interfaces/Local Scope 1 - Is a graphlet class more prevalent than others?.ipynb
@@ -3,30 +3,34 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b50a3105",
+   "id": "34aafd7b",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading Anchor Nodes: 100%|███████████████████████████████████████████| 42/42 [00:00<00:00, 412554.49it/s]\n",
-      "Loading Graph Modules: 100%|██████████████████████████████████████████| 27/27 [00:00<00:00, 190329.76it/s]\n",
-      "Loading Graphlet Metrics: 100%|█████████████████████████████████| 13150/13150 [00:00<00:00, 157286.70it/s]\n"
+      "Loading graphlet metrics: 100%|███████| 13150/13150 [00:00<00:00, 157373.76it/s]\n",
+      "Loading anchor nodes: 100%|█████████████████| 42/42 [00:00<00:00, 415473.51it/s]\n",
+      "Loading anchor node shortest paths: 100%|███| 42/42 [00:00<00:00, 102063.02it/s]\n",
+      "Loading graph modules: 100%|████████████████| 27/27 [00:00<00:00, 191294.27it/s]\n"
      ]
     }
    ],
    "source": [
-    "from pmotifs.analysis_utilities.loading import load_results\n",
+    "from pmotifs.analysis_utilities.loading import Result\n",
     "from pmotifs.config import config\n",
     "\n",
     "GRAPHLET_SIZE = 3\n",
     "\n",
-    "g, df = load_results(\n",
+    "r = Result.load_result(\n",
     "    config.DATASET_DIRECTORY /  \"yeastInter_st.txt\",\n",
     "    config.EXPERIMENT_OUT / \"yeastInter_st\",\n",
     "    GRAPHLET_SIZE,\n",
-    ")"
+    ")\n",
+    "\n",
+    "g = r.pmotif_graph\n",
+    "df = r.positional_metric_df"
    ]
   },
   {
@@ -171,31 +175,31 @@
       "text/html": [
        "<style type=\"text/css\">\n",
        "</style>\n",
-       "<table id=\"T_a7345\">\n",
+       "<table id=\"T_c7365\">\n",
        "  <caption>Mann-Whitney-U-test </caption>\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_a7345_level0_col0\" class=\"col_heading level0 col0\" >Triangle</th>\n",
-       "      <th id=\"T_a7345_level0_col1\" class=\"col_heading level0 col1\" >3-Dash</th>\n",
+       "      <th id=\"T_c7365_level0_col0\" class=\"col_heading level0 col0\" >Triangle</th>\n",
+       "      <th id=\"T_c7365_level0_col1\" class=\"col_heading level0 col1\" >3-Dash</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_a7345_level0_row0\" class=\"row_heading level0 row0\" >Triangle</th>\n",
-       "      <td id=\"T_a7345_row0_col0\" class=\"data row0 col0\" >{'statistic': 2592.0, 'pvalue': 1.0}</td>\n",
-       "      <td id=\"T_a7345_row0_col1\" class=\"data row0 col1\" >{'statistic': 547779.0, 'pvalue': 0.016526059312907355}</td>\n",
+       "      <th id=\"T_c7365_level0_row0\" class=\"row_heading level0 row0\" >Triangle</th>\n",
+       "      <td id=\"T_c7365_row0_col0\" class=\"data row0 col0\" >{'statistic': 2592.0, 'pvalue': 1.0}</td>\n",
+       "      <td id=\"T_c7365_row0_col1\" class=\"data row0 col1\" >{'statistic': 547779.0, 'pvalue': 0.016526059312907355}</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_a7345_level0_row1\" class=\"row_heading level0 row1\" >3-Dash</th>\n",
-       "      <td id=\"T_a7345_row1_col0\" class=\"data row1 col0\" >{'statistic': 393837.0, 'pvalue': 0.016526059312907355}</td>\n",
-       "      <td id=\"T_a7345_row1_col1\" class=\"data row1 col1\" >{'statistic': 85517042.0, 'pvalue': 1.0}</td>\n",
+       "      <th id=\"T_c7365_level0_row1\" class=\"row_heading level0 row1\" >3-Dash</th>\n",
+       "      <td id=\"T_c7365_row1_col0\" class=\"data row1 col0\" >{'statistic': 393837.0, 'pvalue': 0.016526059312907355}</td>\n",
+       "      <td id=\"T_c7365_row1_col1\" class=\"data row1 col1\" >{'statistic': 85517042.0, 'pvalue': 1.0}</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f7010fecb20>"
+       "<pandas.io.formats.style.Styler at 0x7f65e3f81ae0>"
       ]
      },
      "execution_count": 6,
