--- a/notebooks/Interfaces/Local Scope 2 - Which graphlet occurrence more prevalent than others?.ipynb
+++ b/notebooks/Interfaces/Local Scope 2 - Which graphlet occurrence more prevalent than others?.ipynb
@@ -10,7 +10,7 @@
     "# Loading of Env Vars to enable parameterized command line usage\n",
     "import os\n",
     "\n",
-    "GRAPHLET_SIZE = os.environ.get('GRAPHLET_SIZE', 3)\n",
+    "GRAPHLET_SIZE = int(os.environ.get('GRAPHLET_SIZE', 3))\n",
     "DATASET = os.environ.get('DATASET', \"yeastInter_st.txt\")\n",
     "EXPERIMENT_OUT = os.environ.get('EXPERIMENT_OUT', \"yeastInter_st\")\n",
     "METRIC_NAME = os.environ.get('METRIC_NAME', \"degree\")"
