--- a/notebooks/Interfaces/Global Scope 1 - Is a graphlet class a motif?.ipynb
+++ b/notebooks/Interfaces/Global Scope 1 - Is a graphlet class a motif?.ipynb
@@ -39,10 +39,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading graphlet metrics: 100%|█████████████████████████████████| 13150/13150 [00:00<00:00, 141551.09it/s]\n",
-      "Loading anchor nodes: 100%|███████████████████████████████████████████| 42/42 [00:00<00:00, 371647.19it/s]\n",
-      "Loading anchor node shortest paths: 100%|██████████████████████████████| 42/42 [00:00<00:00, 54220.00it/s]\n",
-      "Loading graph modules: 100%|██████████████████████████████████████████| 27/27 [00:00<00:00, 268355.94it/s]\n"
+      "Loading graphlet metrics: 100%|█████████████████████████████████| 13150/13150 [00:00<00:00, 157420.48it/s]\n",
+      "Loading anchor nodes: 100%|████████████████████████████████████████████| 42/42 [00:00<00:00, 96210.14it/s]\n",
+      "Loading anchor node shortest paths: 100%|█████████████████████████████| 42/42 [00:00<00:00, 124144.30it/s]\n",
+      "Loading graph modules: 100%|██████████████████████████████████████████| 27/27 [00:00<00:00, 190010.42it/s]\n"
      ]
     }
    ],
@@ -58,6 +58,68 @@
     "\n",
     "g = r.pmotif_graph\n",
     "df = r.positional_metric_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "8e50b557",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on PMotifGraph in module pmotifs.PMotifGraph object:\n",
+      "\n",
+      "class PMotifGraph(builtins.object)\n",
+      " |  PMotifGraph(edgelist_path: pathlib.Path, output_directory: pathlib.Path)\n",
+      " |  \n",
+      " |  An Object wrapper around the folder structure of a graph which is subject to pmotif detection\n",
+      " |  \n",
+      " |  Methods defined here:\n",
+      " |  \n",
+      " |  __init__(self, edgelist_path: pathlib.Path, output_directory: pathlib.Path)\n",
+      " |      Initialize self.  See help(type(self)) for accurate signature.\n",
+      " |  \n",
+      " |  get_graph_path(self) -> pathlib.Path\n",
+      " |  \n",
+      " |  get_graphlet_directory(self) -> pathlib.Path\n",
+      " |  \n",
+      " |  get_graphlet_freq_file(self, graphlet_size: int) -> pathlib.Path\n",
+      " |  \n",
+      " |  get_graphlet_output_directory(self, graphlet_size: int) -> pathlib.Path\n",
+      " |  \n",
+      " |  get_graphlet_pos_zip(self, graphlet_size: int) -> pathlib.Path\n",
+      " |  \n",
+      " |  get_positional_data_directory(self, graphlet_size: int) -> pathlib.Path\n",
+      " |  \n",
+      " |  load_graph(self) -> networkx.classes.graph.Graph\n",
+      " |  \n",
+      " |  load_graphlet_freq_file(self, graphlet_size: int) -> Dict[str, int]\n",
+      " |      Return a lookup from graphlet-class to count of graphlet-occurrence\n",
+      " |  \n",
+      " |  load_graphlet_pos_zip(self, graphlet_size: int, supress_tqdm: bool = False) -> List[pmotifs.GraphletOccurence.GraphletOccurrence]\n",
+      " |      Returns all motifs in a lookup from their index to their id (adj matrix string) and a list of their nodes\n",
+      " |  \n",
+      " |  load_positional_meta(self, graphlet_size: int, supress_tqdm: bool = False) -> pmotifs.PositionalMetricMeta.PositionalMetricMeta\n",
+      " |  \n",
+      " |  load_positional_metrics(self, graphlet_size: int, supress_tqdm: bool = False) -> pmotifs.GraphletPositionalMetrics.GraphPositionalMetrics\n",
+      " |  \n",
+      " |  ----------------------------------------------------------------------\n",
+      " |  Data descriptors defined here:\n",
+      " |  \n",
+      " |  __dict__\n",
+      " |      dictionary for instance variables (if defined)\n",
+      " |  \n",
+      " |  __weakref__\n",
+      " |      list of weak references to the object (if defined)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(g)"
    ]
   },
   {
@@ -133,7 +195,7 @@
     "    graphlet_size = get_graphlet_size_from_class(result_df[\"graphlet_class\"][0])\n",
     "    all_frequencies = defaultdict.fromkeys(all_graphlet_classes_of_size(graphlet_size), 0)\n",
     "           \n",
-    "    return dict(all_frequencies | dict(result_df.groupby(\"graphlet_class\").agg(\"count\")[\"nodes\"]))\n",
+    "    return dict(dict(all_frequencies) | dict(result_df.groupby(\"graphlet_class\").agg(\"count\")[\"nodes\"]))\n",
     "\n",
     "to_graphlet_class_frequency(df)"
    ]
