--- a/notebooks/Interfaces/Global Scope 3 - Is a graphlet occurrence a positional motif?.ipynb
+++ b/notebooks/Interfaces/Global Scope 3 - Is a graphlet occurrence a positional motif?.ipynb
@@ -30,10 +30,10 @@
      "evalue": "Difficult to do, not implemented, see above",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m \u001b[38;5;28;01mFalse\u001b[39;00m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDifficult to do, not implemented, see above\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Difficult to do, not implemented, see above"
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mAssertionError\u001B[0m                            Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[2], line 1\u001B[0m\n\u001B[0;32m----> 1\u001B[0m \u001B[38;5;28;01massert\u001B[39;00m \u001B[38;5;28;01mFalse\u001B[39;00m, \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124mDifficult to do, not implemented, see above\u001B[39m\u001B[38;5;124m\"\u001B[39m\n",
+      "\u001B[0;31mAssertionError\u001B[0m: Difficult to do, not implemented, see above"
      ]
     }
    ],
